--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -42,11 +42,20 @@
               </div>
             </div>
             <div class="hdr-rgt">
-              <nav class="hdr-top-navbar">
+              <nav class="main-nav">
                 <ul class="clearfix ulc">
                   <li><a href="#">What We Do</a></li>
                   <li><a href="#">For NGOs</a></li>
-                  <li><a href="#">For Businesses</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">For Businesses</a>
+                    <ul class="sub-menu">
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                    </ul>
+                  </li>
                   <li><a href="#">Campaigns</a></li>
                 </ul>
               </nav>
@@ -73,7 +82,7 @@
   </div>
 </header>
 
-<section class="main-content">
+<section class="main-content" style="background: #707070; height: 200px;">
   <div class="container">
       <div class="row">
         <div class="col-md-6">
