--- a/themes/socialasset/faq.html
+++ b/themes/socialasset/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home Page</title>
+	<title>FAQ Page</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -82,19 +82,43 @@
   </div>
 </header>
 
-<section class="main-content" style="background: #707070; height: 200px;">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6">
-
+<div class="faq-page-sec-cntlr">
+  <div class="container-xs">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="faq-page-entry-hdr">
+          <h1>Social Asset Story</h1>
+          <ul class="clearfix ulc">
+            <li class="faq-tab-active"><a href="#">FOR <strong> SUPPORTERS</strong></a></li>
+            <li><a href="#">FOR <strong> NGOS</strong></a></li>
+          </ul>
+          <h6>Frequent Asked Question for Supporters</h6>
         </div>
       </div>
-  </div>    
-</section>
+      
+      <div class="col-sm-12">
+        <div class="faq-des-wrap">
+          <div class="hh-accordion-tab-row">
+            <h3 class="hh-accordion-title">About Account security, How do I change my password?</h3>
+            <div class="hh-accordion-des">
+              <div>
+                <strong>About Account security, How do I change my password?</strong>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
+                  </p>
+                  <div class="">
+                    
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+    </div>
+  </div>
+</div>
 
 
 
