header and faq desktop done

--- a/themes/socialasset/faq.html
+++ b/themes/socialasset/faq.html
@@ -99,20 +99,86 @@
       <div class="col-sm-12">
         <div class="faq-des-wrap">
           <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">About Account security, How do I change my password?</h3>
+            <h6 class="hh-accordion-title">About Account security, How do I change my password?</h6>
             <div class="hh-accordion-des">
               <div>
-                <strong>About Account security, How do I change my password?</strong>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
                   </p>
-                  <div class="">
-                    
+                  <div class="video-play">
+                    <a data-fancybox href="https://youtu.be/_Nua3Cjdik0">
+                      <img alt="" src="assets/images/fancy-full-img.png">
+                    </a>
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
           </div>
+          <div class="hh-accordion-tab-row">
+            <h6 class="hh-accordion-title">About Account security, How do I change my password?</h6>
+            <div class="hh-accordion-des">
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
+                  </p>
+                  <div class="video-play">
+                    <a data-fancybox href="https://youtu.be/_Nua3Cjdik0">
+                      <img alt="" src="assets/images/fancy-full-img.png">
+                    </a>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h6 class="hh-accordion-title">About Account security, How do I change my password?</h6>
+            <div class="hh-accordion-des">
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
+                  </p>
+                  <div class="video-play">
+                    <a data-fancybox href="https://youtu.be/_Nua3Cjdik0">
+                      <img alt="" src="assets/images/fancy-full-img.png">
+                    </a>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h6 class="hh-accordion-title">About Account security, How do I change my password?</h6>
+            <div class="hh-accordion-des">
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
+                  </p>
+                  <div class="video-play">
+                    <a data-fancybox href="https://youtu.be/_Nua3Cjdik0">
+                      <img alt="" src="assets/images/fancy-full-img.png">
+                    </a>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="hh-accordion-tab-row">
+            <h6 class="hh-accordion-title">About Account security, How do I change my password?</h6>
+            <div class="hh-accordion-des">
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitae elit non libero feugiat blandit at sed lacus. Quisque dignissim vestibulum dignissim. Duis id ante sit amet nibh fringilla blandit ut a libero. Proin id consectetur turpis. Nunc fringilla, sem a eleifend rutrum, nulla nisl laoreet arcu, eu varius leo ante sed turpis. Aenean sed arcu sem.
+                  </p>
+                  <div class="video-play">
+                    <a data-fancybox href="https://youtu.be/_Nua3Cjdik0">
+                      <img alt="" src="assets/images/fancy-full-img.png">
+                    </a>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis faucibus aliquet neque, non euismod metus egestas molestie. Pellentesque sodales blandit lectus sit amet auctor. Etiam non erat sem. Donec vitaLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
