--- a/themes/socialasset/index.html
+++ b/themes/socialasset/index.html
@@ -95,16 +95,18 @@
 <div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
 <div class="margin" data-value='100'></div>
 <div class="padding" data-value='100'></div>
+<div class="margin" data-value='100'></div>
+<div class="padding" data-value='100'></div>
 
 
-
+ 
 
 <footer class="footer-wrp">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
-          <div class="ftr-col">
-          </div>
+      <div class="col-sm-12">
+        <div class="ftr-col">
+        </div>
       </div>
     </div>
   </div> 
