--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -122,6 +122,7 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/nav.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
