tarms page desktop view done

--- a/themes/socialasset/terms.html
+++ b/themes/socialasset/terms.html
@@ -89,28 +89,35 @@
                  <div class="item-menu">
                    <h5>Contents</h5>
                    <ul id="scrollToAarea">
-                     <li><a href="#cookiesservices">Cookies</a></li>
-                     <li><a href="#termsofservices">Terms of Use</a></li>
-                     <li><a href="#privacypolicy">Privacy Policy</a></li>
-                     <li><a href="#">Lorem ipsum</a></li>
+                      <li><a href="#termsofservices">Terms & Conditions</a></li>
+                      <li><a href="#privacypolicy">Privacy policy</a></li>
+                      <li><a href="#cookiesservices">Cookies</a></li>
                    </ul>
                  </div>
                </div>
             </div>
             <div class="itemsipcontent">
              <div class="item-dsce">
-               <div id="cookiesservices" class="item-cont">
+               <div id="termsofservices" class="item-cont">
                    <h4>Terms & Conditions</h4>
                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. </p>
+                   <h6>Title</h6>
+                   <p>Donec sed sem vel nunc dictum pellentesque sit amet nec sem. Nam accumsan orci eget congue ullamcorper. Sed eu libero malesuada, egestas neque eget, pellentesque quam. Ut tincidunt a urna eu suscipit. Suspendisse vitae orci lacus. Nam elementum sapien eget elit laoreet luctus. Curabitur eu libero tellus. Maecenas faucibus blandit nisl, sed tempor elit rhoncus nec. Integer mollis metus dapibus tortor convallis, non condimentum leo pharetra.</p>
+                   <h6>Title</h6>
+                   <p>Donec sed sem vel nunc dictum pellentesque sit amet nec sem. Nam accumsan orci eget congue ullamcorper. Sed eu libero malesuada, egestas neque eget, pellentesque quam. Ut tincidunt a urna eu suscipit. Suspendisse vitae orci lacus. Nam elementum sapien eget elit laoreet luctus. Curabitur eu libero tellus. Maecenas faucibus blandit nisl, sed tempor elit rhoncus nec. Integer mollis metus dapibus tortor convallis, non condimentum leo pharetra. Donec sed sem vel nunc dictum pellentesque sit amet nec sem. Nam accumsan orci eget congue ullamcorper. Sed eu libero malesuada, egestas neque eget, pellentesque quam. Ut tincidunt a urna eu suscipit. Suspendisse vitae orci lacus. Nam elementum sapien eget elit laoreet luctus. Curabitur eu libero tellus. Maecenas faucibus blandit nisl, sed tempor elit rhoncus nec. Integer mollis metus dapibus tortor convallis, non condimentum leo pharetra.</p>
                </div>
-               <div id="termsofservices" class="item-cont privacy-policy">
-                   <h5>Terms of Use</h5>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut nisi in libero ultrices fermentum. Vivamus a bibendum est, nec scelerisque nulla. Vestibulum consectetur rutrum mi quis vehicula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean pulvinar nulla justo, ut ultricies felis posuere non. Sed id dui id diam efficitur congue. Morbi rutrum, lacus non cursus porta, sem nulla hendrerit odio, ut semper ex est vitae eros. Ut nec sollicitudin orci, nec viverra tortor. Cras congue sagittis nulla aliquam rutrum. Vivamus a bibendum leo. Ut eleifend mauris non efficitur faucibus. Sed mattis dui in nunc euismod mollis. Nulla laoreet urna leo, quis scelerisque magna mollis vel. Nullam malesuada auctor dictum. Mauris finibus mi quis mauris blandit, sagittis ornare est vulputate. Donec in venenatis elit. </p>
+               <div id="privacypolicy" class="item-cont privacy-policy">
+                   <h4>Privacy policy</h4>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. </p>
+                   <h6>Title </h6>
+                   <p>Donec sed sem vel nunc dictum pellentesque sit amet nec sem. Nam accumsan orci eget congue ullamcorper. Sed eu libero malesuada, egestas neque eget, pellentesque quam. Ut tincidunt a urna eu suscipit. Suspendisse vitae orci lacus. Nam elementum sapien eget elit laoreet luctus. Curabitur eu libero tellus. Maecenas faucibus blandit nisl, sed tempor elit rhoncus nec. Integer mollis metus dapibus tortor convallis, non condimentum leo pharetra.</p>
+
                </div>
-               <div id="privacypolicy" class="item-cont privacy-policy pdt-top-45">
-                   <h5>Privacy Policy</h5>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut nisi in libero ultrices fermentum. Vivamus a bibendum est, nec scelerisque nulla. Vestibulum consectetur rutrum mi quis vehicula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean pulvinar nulla justo, ut ultricies felis posuere non. Sed id dui id diam efficitur congue. Morbi rutrum, lacus non cursus porta, sem nulla hendrerit odio, ut semper ex est vitae eros. Ut nec sollicitudin orci, nec viverra tortor. Cras congue sagittis nulla aliquam rutrum. Vivamus a bibendum leo. Ut eleifend mauris non efficitur faucibus. Sed mattis dui in nunc euismod mollis. Nulla laoreet urna leo, quis scelerisque magna mollis vel. Nullam malesuada auctor dictum. Mauris finibus mi quis mauris blandit, sagittis ornare est vulputate. Donec in venenatis elit.</p>
-                   <p class="mt-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut nisi in libero ultrices fermentum. Vivamus a bibendum est, nec scelerisque nulla. Vestibulum consectetur rutrum mi quis vehicula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean pulvinar nulla justo, ut ultricies felis posuere non. Sed id dui id diam efficitur congue. Morbi rutrum, lacus non cursus porta, sem nulla hendrerit odio, ut semper ex est vitae eros. Ut nec sollicitudin orci, nec viverra tortor. Cras congue sagittis nulla aliquam rutrum. Vivamus a bibendum leo. Ut eleifend mauris non efficitur faucibus. Sed mattis dui in nunc euismod mollis. Nulla laoreet urna leo, quis scelerisque magna mollis vel. Nullam malesuada auctor dictum. Mauris finibus mi quis mauris blandit, sagittis ornare est vulputate. Donec in venenatis elit. </p>
+               <div id="cookiesservices" class="item-cont cookies-services">
+                   <h4>Cookies</h4>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan urna quis tempor dictum. Mauris laoreet est euismod, ullamcorper ante vel, semper felis. </p>
+                   <h6>Title </h6>
+                   <p>Donec sed sem vel nunc dictum pellentesque sit amet nec sem. Nam accumsan orci eget congue ullamcorper. Sed eu libero malesuada, egestas neque eget, pellentesque quam. Ut tincidunt a urna eu suscipit. Suspendisse vitae orci lacus. Nam elementum sapien eget elit laoreet luctus. Curabitur eu libero tellus. Maecenas faucibus blandit nisl, sed tempor elit rhoncus nec. Integer mollis metus dapibus tortor convallis, non condimentum leo pharetra.</p>
                </div>
             </div>
           </div>
