user-campaign-list page start

--- a/themes/socialasset/terms.html
+++ b/themes/socialasset/terms.html
@@ -153,8 +153,10 @@
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/nav.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
 </html>
+
 
