--- a/themes/socialasset/about-us.html
+++ b/themes/socialasset/about-us.html
@@ -266,6 +266,7 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/bootstrap-select.min.js"></script>
 <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="assets/js/jquery.sticky-sidebar.js"></script>
 <script src="assets/fancybox3/dist/jquery.fancybox.min.js"></script>
 <script src="assets/slick.slider/slick.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo2-QJ7RdCkLw3NFZEu71mEKJ_8LczG-c"></script>
@@ -273,6 +274,7 @@
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/nav.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
