--- a/themes/socialasset/faq.html
+++ b/themes/socialasset/faq.html
@@ -214,6 +214,7 @@
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/nav.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
