--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -124,7 +124,9 @@
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/nav.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
 </html>
+
