contact page responsive done

--- a/themes/socialasset/contact.html
+++ b/themes/socialasset/contact.html
@@ -90,22 +90,22 @@
           <div class="sa-contact-form-wrp">
             <form>
               <div class="sa-form-group-wrap clearfix">
-                <div class="sa-input form-group">
+                <div class="sa-input">
                   <label>Name *</label>
                   <input type="text" name="name" data-error="Name is required." required>
                 </div>
-                <div class="sa-input form-group">
+                <div class="sa-input">
                   <label>Surname *</label>
                   <input type="text" name="name" data-error="Email is required." required>
                 </div>
               </div>
               <div class="sa-form-group-wrap clearfix">
-                <div class="sa-input form-group">
-                  <label>Select Your Type *</label>
+                <div class="sa-input">
+                  <label>Mail *</label>
                   <input type="email" name="email" data-error="Email is required." required>
                 </div>
                 <div class="sa-input select-input form-group">
-                  <label >Select Department</label>
+                  <label >Select Your Type *</label>
                   <div class="select-dep">
                     <select name="select-dep" class="selectpicker form-control" title="User, NGO or Businesses">
                       <option value="1">Dep1</option>
@@ -117,7 +117,7 @@
               </div>
 
               <div class="sa-form-group-wrap clearfix">
-                <div class="sa-input select-input form-group">
+                <div class="sa-input select-input">
                   <label >Industry background</label>
                   <div class="select-dep">
                     <select name="select-dep" class="selectpicker form-control" title="Select">
@@ -141,7 +141,7 @@
               </div>
               <div class="sa-form-submit-wrap clearfix">
                 <div class="sa-form-submit-btn clearfix">
-                  <input type="submit" name="submit" value="SEND">
+                  <input type="submit" name="submit" value="Submit">
                 </div>
                 <div class="sa-form-submit-text">
                   <p> * Υποχρεωτικά Πεδία </p>
