--- a/themes/socialasset/what-we-do.html
+++ b/themes/socialasset/what-we-do.html
@@ -85,8 +85,8 @@
 
 <section class="page-banner has-button">
   <div class="page-banner-controller" style="overflow: hidden;">
-    <div class="page-banner-bg" style="background-image:url(assets/images/wwd-banner.png);">
-      <div class="page-banner-des" style="min-height: 543px;">
+    <div class="page-banner-bg" style="background-image:url(assets/images/wwd-banner.png); min-height: 543px">
+      <div class="page-banner-des">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
