list page 50% grd fix

--- a/themes/socialasset/what-we-do.html
+++ b/themes/socialasset/what-we-do.html
@@ -332,9 +332,9 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo2-QJ7RdCkLw3NFZEu71mEKJ_8LczG-c"></script>
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
-<script src="assets/js/wow.min.js"></script>
+
 <script src="assets/js/nav.js"></script>
-<script src="js/masonry.pkgd.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
