--- a/themes/socialasset/what-we-do.html
+++ b/themes/socialasset/what-we-do.html
@@ -133,39 +133,39 @@
           <div class="join-journey-sct-grid">
             <ul class="ulc clearfix">
               <li>
-                <div class="join-journey-sct-grid-inner">
-                  <div class="join-journey-sct-grid-img" style="background: url('assets/images/jjs-grid-1.png');">
-                    <div class="jjsg-media-icon">
-                      <img src="assets/images/jjs-grid-media.png">
+                <div class="join-journey-sct-grid-inner clearfix">
+                  <div class="join-journey-sct-grid-img-top-wrap">
+                    <div class="join-journey-sct-grid-img-top" style="background: url('assets/images/jjs-grid-1.png');">
+                      <div class="jjsg-media-icon">
+                        <img src="assets/images/jjs-grid-media.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="jjsg-des-top-wrap">
+                    <div class="jjsg-des-top">
+                      <div class="jjsg-des">
+                        <h3>For NGOS</h3>
+                        <p>AI allows our bot to provides non-bias and reliable<br> feedback regarding career development and<br> challenges.</p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="join-journey-sct-grid-inner">
-                  <div class="jjsg-des-wrap">
-                    <div class="jjsg-des">
-                      <h3>For NGOS</h3>
-                      <p>AI allows our bot to provides non-bias and reliable<br> feedback regarding career development and<br> challenges.</p>
+                <div class="join-journey-sct-grid-inner clearfix">
+                  <div class="join-journey-sct-grid-img-bottom-wrap">
+                    <div class="join-journey-sct-grid-img-bottom" style="background: url('assets/images/jjs-grid-2.png');">
+                      <div class="jjsg-media-icon">
+                        <img src="assets/images/wwd-campaigns-grid-1.png">
+                      </div>
                     </div>
                   </div>
-                </div>
-              </li>
-              <li>
-                <div class="join-journey-sct-grid-inner">
-                  <div class="jjsg-des-wrap">
-                    <div class="jjsg-des">
-                      <h3>For Businesses</h3>
-                      <p>AI allows us to aggregate your data into a career path<br> and connect you with the right resources to make it<br> happen.</p>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="join-journey-sct-grid-inner">
-                  <div class="join-journey-sct-grid-img" style="background: url('assets/images/jjs-grid-2.png');">
-                    <div class="jjsg-media-icon">
-                      <img src="assets/images/wwd-campaigns-grid-1.png">
+                  <div class="jjsg-des-bottom-wrap">
+                    <div class="jjsg-des-bottom">
+                      <div class="jjsg-des">
+                        <h3>For Businesses</h3>
+                        <p>AI allows us to aggregate your data into a career path<br> and connect you with the right resources to make it<br> happen.</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -184,13 +184,14 @@
       <div class="col-sm-12">
         <div class="wwd-user-sec-inner">
           <div class="wwd-user-sec-img" style="background: url('assets/images/wwd-user-sec-img.png');">
-            <div class="wwd-user-sec-rgt">
-              <div class="wwd-user-sec-rgt-inner">
-                <div class="wwd-user-sec-rgt-des">
-                  <h3>For Users</h3>
-                  <p>Access certified courses and <br> publications related to your field</p>
-                  <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
-                </div>
+            
+          </div>
+          <div class="wwd-user-sec-rgt">
+            <div class="wwd-user-sec-rgt-inner">
+              <div class="wwd-user-sec-rgt-des">
+                <h3>For Users</h3>
+                <p>Access certified courses and <br> publications related to your field</p>
+                <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
               </div>
             </div>
           </div>
