--- a/themes/socialasset/about-us.html
+++ b/themes/socialasset/about-us.html
@@ -77,6 +77,27 @@
   </div>
 </header>
 
+
+<section class="page-banner has-button">
+  <div class="page-banner-controller" style="overflow: hidden;">
+    <div class="page-banner-bg" style="background-image:url(assets/images/wwd-banner.png); min-height: 543px">
+      <div class="page-banner-des">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="page-banner-des-inner">
+                <h1 class="banner-page-title">We Help People Support NGOs <br/>& Solve Social Problems</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section><!-- end of page-banner -->
+
+
+
 <section class="about-story-sec">
   <div class="about-story-des">
     <div class="container">
@@ -112,7 +133,7 @@
       </div>
     </div>     
   </div>   
-</section>
+</section> 
 
 
 <section class="core-value-sec text-center text-white">
