--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -82,6 +82,45 @@
   </div>
 </header>
 
+<section class="hm-banner-slider-sec">
+  <div class="hm-banner-slider">
+    <div class="hm-banner-slider-item hm-banner-design-1 d-none" style="background: url('assets/images/hm-banner-slider-item01.png')">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="hm-banner-slider-item-innr clearfix">
+              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-slider-item01.png')">
+              </div>
+              <div class="hm-banner-slider-item-rgt-des text-white">
+                <span class="actionaid-tag">Actionaid</span>
+                <h4>Clean South Crete</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <a href="#">VIEW CAMPAIGN</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+
+    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.png')">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="hm-banner-slider-item-innr">
+              <h2>The Interface between Business and Social Problems</h2>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+
+  </div>      
+</section>
+
+
+
+
 <section class="main-content" style="background: #707070; height: 200px;">
   <div class="container">
       <div class="row">
