--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -84,12 +84,16 @@
 
 <section class="hm-banner-slider-sec">
   <div class="hm-banner-slider">
-    <div class="hm-banner-slider-item hm-banner-design-1 d-none" style="background: url('assets/images/hm-banner-slider-item01.png')">
+    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item01.png')">
+      <span class="hm-banner-slider-overlay"></span>
+      <span class="hm-banner-slider-rb-icon">
+        <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
+      </span>
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr clearfix">
-              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-slider-item01.png')">
+              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')">
               </div>
               <div class="hm-banner-slider-item-rgt-des text-white">
                 <span class="actionaid-tag">Actionaid</span>
@@ -102,13 +106,55 @@
         </div>
       </div>    
     </div>
-
     <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.png')">
+      <span class="hm-banner-slider-overlay"></span>
+      <span class="hm-banner-slider-rb-icon">
+        <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
+      </span>
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr">
               <h2>The Interface between Business and Social Problems</h2>
+              <a href="#">CREATE ACCOUNT</a>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.png')">
+      <span class="hm-banner-slider-overlay"></span>
+      <span class="hm-banner-slider-rb-icon">
+        <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
+      </span>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="hm-banner-slider-item-innr clearfix">
+              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')">
+              </div>
+              <div class="hm-banner-slider-item-rgt-des text-white">
+                <span class="actionaid-tag">Actionaid</span>
+                <h4>Clean South Crete</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <a href="#">VIEW CAMPAIGN</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.png')">
+      <span class="hm-banner-slider-overlay"></span>
+      <span class="hm-banner-slider-rb-icon">
+        <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
+      </span>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="hm-banner-slider-item-innr">
+              <h2>The Interface between Business and Social Problems</h2>
+              <a href="#">CREATE ACCOUNT</a>
             </div>
           </div>
         </div>
