--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -348,20 +348,55 @@
 
 
 
-<section class="hm-partner-sec">
-  <div class="container">
+<section class="hm-blog-sec">
+  <div class="container-md">
     <div class="row">
       <div class="col-12">
-        <div class="hm-partner-innr">
-          <div class="hm-partner-head text-center">
+        <div class="hm-blog-innr">
+          <div class="hm-blog-head text-center">
             <h4>Our Blog</h4>
             <p>Learn everything about our goal through our projects.</p>
           </div>
-          <div class="hm-blog-grid clearfix">
+          <div class="hm-blog-grid-wrp clearfix">
             <div class="hm-blog-grid-item">
-              <div class="hm-blog-grid-bg"></div>
+              <div class="hm-blog-grid-item-innr">
+                <div class="hm-blog-grid-bg">
+                  <div class="hm-blog-grid-bg-main" style="background: url('assets/images/hm-blog1.png');"></div>
+                </div>
+                <div class="hm-blog-grid-des mHc">
+                  <h6>Writing in the Sciences</h6>
+                  <p>This course teaches scientists to become more effective writer. Topics include: principles of good writing,  the format of a scientific manuscript, ethical issues in scientific publications.</p>
+                </div>
+                <a href="#" class="overlay-link"></a>              
+              </div>  
             </div>
-
+            <div class="hm-blog-grid-item">
+              <div class="hm-blog-grid-item-innr">
+                <div class="hm-blog-grid-bg">
+                  <div class="hm-blog-grid-bg-main" style="background: url('assets/images/hm-blog2.png');"></div>
+                </div>
+                <div class="hm-blog-grid-des mHc">
+                  <h6>Introduction to Translational Science</h6>
+                  <p>Translational science seeks to speed up the process of moving research discoveries from the laboratory into healthcare practices.</p>
+                </div>
+                <a href="#" class="overlay-link"></a>              
+              </div>  
+            </div>
+            <div class="hm-blog-grid-item">
+              <div class="hm-blog-grid-item-innr">
+                <div class="hm-blog-grid-bg">
+                  <div class="hm-blog-grid-bg-main" style="background: url('assets/images/hm-blog3.png');"></div>
+                </div>
+                <div class="hm-blog-grid-des mHc">
+                  <h6>Open Source tools for Data Science</h6>
+                  <p>In this course, you’ll learn about Jupyter Notebooks, RStudio IDE, Apache Zeppelin and Data Science Experience.</p>
+                </div>
+                <a href="#" class="overlay-link"></a>              
+              </div>  
+            </div>
+          </div>
+          <div class="hm-blog-load-more text-center">
+            <a href="#">VIEW ALL ARTICLES</a>
           </div>
         </div>
       </div>
