--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -84,7 +84,7 @@
 
 <section class="hm-banner-slider-sec">
   <div class="hm-banner-slider">
-    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item01.png')">
+    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.png')">
       <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
@@ -165,7 +165,7 @@
 </section>
 
 
-<section class="hm-wc-social-assets-sec">
+<section class="hm-wc-social-assets-sec ">
   <div class="hm-wc-social-assets-top">
     <div class="container">
       <div class="row">
@@ -180,23 +180,87 @@
       </div>
     </div>
     <span class="hm-wc-social-assets-top-shape"></span>      
-  </div>
-  
+  </div>  
 </section>
 
-
-<section class="main-content" style="background: #707070; height: 200px;">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6">
-
+<section class="join-journey-section hm-join-journey-sec">
+  <div class="container-xlg">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="join-journey-section-inner">
+          <div class="join-journey-sct-grid">
+            <ul class="ulc clearfix">
+              <li>
+                <div class="join-journey-sct-grid-inner clearfix">
+                  <div class="join-journey-sct-grid-img-top-wrap">
+                    <div class="join-journey-sct-grid-img-top" style="background: url('assets/images/jjs-grid-1.png');">
+                      <div class="jjsg-media-icon">
+                        <img src="assets/images/jjs-grid-media.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="jjsg-des-top-wrap">
+                    <div class="jjsg-des-top">
+                      <div class="jjsg-des">
+                        <h3>For NGOS</h3>
+                        <p>AI allows our bot to provides non-bias and reliable<br> feedback regarding career development and<br> challenges.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="join-journey-sct-grid-inner clearfix">
+                  <div class="join-journey-sct-grid-img-bottom-wrap">
+                    <div class="join-journey-sct-grid-img-bottom" style="background: url('assets/images/jjs-grid-2.png');">
+                      <div class="jjsg-media-icon">
+                        <img src="assets/images/wwd-campaigns-grid-1.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="jjsg-des-bottom-wrap">
+                    <div class="jjsg-des-bottom">
+                      <div class="jjsg-des">
+                        <h3>For Businesses</h3>
+                        <p>AI allows us to aggregate your data into a career path<br> and connect you with the right resources to make it<br> happen.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-  </div>    
+    </div>
+  </div>
 </section>
+
+
+<section class="wwd-user-section hm-wwd-user-sec">
+  <div class="container-xlg">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="wwd-user-sec-inner">
+          <div class="wwd-user-sec-img" style="background: url('assets/images/wwd-user-sec-img.png');">
+            
+          </div>
+          <div class="wwd-user-sec-rgt">
+            <div class="wwd-user-sec-rgt-inner">
+              <div class="wwd-user-sec-rgt-des">
+                <h3>For Users</h3>
+                <p>Access certified courses and <br> publications related to your field</p>
+                <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 
 
@@ -347,7 +411,6 @@
 </section>
 
 
-
 <section class="hm-blog-sec">
   <div class="container-md">
     <div class="row">
@@ -403,8 +466,6 @@
     </div>
   </div>    
 </section>
-
-
 
 
 <footer class="footer-wrp">
